Fixing wrong colors

--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ body {
 #numbers {
   width: 100px;
   height: 100px;
-  background-color: var(--back);
+  background-color: var(--block);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -114,7 +114,7 @@ button {
 .taskItem {
   width: 100%;
   display: flex;
-  background-color: var(--back);
+  background-color: var(--block);
   padding: 10px;
   border-radius: 10px;
   justify-content: space-between;
